# backend/routes/productRoutes.js
@@ -8,6 +8,8 @@ const { upload } = require("../middleware/uploadMiddleware");
 router.get("/", productController.getAllProducts);
 
 // Protected Routes (Hanya Admin yang punya Token yang bisa akses)
+router.get("/admin/list", verifyToken, productController.getAdminProducts);
+router.patch("/:id/status", verifyToken, productController.toggleProductStatus);
 // // upload.array('images') membolehkan upload banyak file sekaligus
 router.post("/", verifyToken, upload.array("images", 20), productController.createProduct);
 router.put("/:id", verifyToken, upload.array("images", 20), productController.updateProduct);
